dataset1235/2025-2/2947369575/users/1847978808/executions/3873599344_3788368433.log
== RUN (2025-08-20 23:42:21)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:42:01)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = imput()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput()
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput()
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput()
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput()
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput()
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:31:34)
-- CODE: 
# Use este codigo como ponto de partida
string = "Strik"
# Leitura de valores de entrada
input(string.print())

# Impressao de saidas
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input(string.print())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'print'
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input(string.print())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'print'
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input(string.print())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'print'
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input(string.print())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'print'
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input(string.print())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'print'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:38:25)
-- CODE: 
# Use este codigo como ponto de partida
string = (Strik)
# Leitura de valores de entrada
input(string())

# Impressao de saidas
print(input(string.upper()))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:35:12)
-- CODE: 
# Use este codigo como ponto de partida
string = (Strik)
# Leitura de valores de entrada
input(string())

# Impressao de saidas
print(input(string()))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:43:12)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:38:24)
-- CODE: 
# Use este codigo como ponto de partida
string = (Strik)
# Leitura de valores de entrada
input(string())

# Impressao de saidas
print(input(string.upper()))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:39:46)
-- CODE: 
# Use este codigo como ponto de partida
string = (Strik)
# Leitura de valores de entrada
input(Strik())

# Impressao de saidas
print(input())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:39:44)
-- CODE: 
# Use este codigo como ponto de partida
string = (Strik)
# Leitura de valores de entrada
input(Strik())

# Impressao de saidas
print(input())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:33:22)
-- CODE: 
# Use este codigo como ponto de partida
Strik
# Leitura de valores de entrada
input(Strik)

# Impressao de saidas
print(input)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Strik
NameError: name 'Strik' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Strik
NameError: name 'Strik' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Strik
NameError: name 'Strik' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Strik
NameError: name 'Strik' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Strik
NameError: name 'Strik' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:39:45)
-- CODE: 
# Use este codigo como ponto de partida
string = (Strik)
# Leitura de valores de entrada
input(Strik())

# Impressao de saidas
print(input())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:34:36)
-- CODE: 
# Use este codigo como ponto de partida
string = (Strik)
# Leitura de valores de entrada
input(string())

# Impressao de saidas
print(input)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:39:45)
-- CODE: 
# Use este codigo como ponto de partida
string = (Strik)
# Leitura de valores de entrada
input(Strik())

# Impressao de saidas
print(input())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Strik)
              ^^^^^
NameError: name 'Strik' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
